--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "ember-cli": "^3.17.0",
+    "jquery": "^3.5.0",
+    "popper.js": "^1.16.1",
+    "vue": "^2.6.11",
+    "vue-csv-import": "^3.1.0",
+    "vue-xls-csv-parser": "0.0.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
