--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tol_project3",
+  "name": "learnersourced-growth-mindset-questions",
   "version": "0.1.0",
   "private": true,
   "scripts": {
